--- a/FtcRobotController/build.gradle
+++ b/FtcRobotController/build.gradle
@@ -1,12 +1,24 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        debug {
+            keyAlias 'debug_main'
+            keyPassword 'ftc358ftw'
+            storeFile file('/Users/jamesliu/Development/Git_Clones/ftc_app/keystore/Gaulbots.jks')
+            storePassword 'ftc358ftw'
+        }
+    }
     compileSdkVersion = 'Google Inc.:Google APIs:19'
     buildToolsVersion = '21.1.2'
-
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 19
+    }
+    buildTypes {
+        debug {
+            signingConfig signingConfigs.debug
+        }
     }
 }
 
@@ -18,10 +30,10 @@ repositories {
 
 dependencies {
     compile files('libs/android-support-v4.jar')
-    compile (name:'d2xx', ext:'jar')
-    compile (name:'RobotCore-release', ext:'aar')
-    compile (name:'ModernRobotics-release', ext:'aar')
-    compile (name:'FtcCommon-release', ext:'aar')
-    compile (name:'WirelessP2p-release', ext:'aar')
-    compile (name:'Analytics-release', ext:'aar')
+    compile(name: 'd2xx', ext: 'jar')
+    compile(name: 'RobotCore-release', ext: 'aar')
+    compile(name: 'ModernRobotics-release', ext: 'aar')
+    compile(name: 'FtcCommon-release', ext: 'aar')
+    compile(name: 'WirelessP2p-release', ext: 'aar')
+    compile(name: 'Analytics-release', ext: 'aar')
 }
